# snakelings

./: .gitignore  meta.json  pyproject.toml
if/: if1.py
snakelings/: __init__.py  exercise.py  snakelings.py
variables/: variables1.py
