[tool.poetry]
name = "snakelings"
version = "0.1.0"
description = ""
authors = ["Chris Blades <chrisdblades@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "pylint"
pylint = "^2.15.0"

[tool.poetry.scripts]
my-script = "snakelings:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

